<resources>
    <string name="title_error_handler_activity_main">ErrorHandlerMainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="error_handling_button">Launch coroutines</string>
    <string name="error_handling_try_catch_with_launch">Try Catch With Launch</string>
    <string name="error_handling_try_catch_with_nested_launch">Try Catch With Nested Launch</string>
    <string name="error_handling_fetch_data_with_ex_handler">Fetch Data With Ex Handler</string>
    <string name="error_handling_async_await_with_ex_handler">Async Await With Ex Handler</string>
    <string name="error_handling_try_catch_with_async_await">Try Catch With Async Await</string>
    <string name="error_handling_ex_handling_with_coroutine_scope">Ex Handling With Coroutine Scope</string>
    <string name="error_handling_launch_supervisor_scope_with_ex_handler">Launch Supervisor Scope With Ex Handler</string>
    <string name="error_handling_async_supervisor_scope_with_try_catch">Async Supervisor Scope With Try Catch</string>
</resources>